syntax = "proto3";

package gameap;

option go_package = "github.com/gameap/gameap/pkg/proto";

message Node {
  uint64 id = 1;
  bool enabled = 2;
  string name = 3;
  string os = 4;
  string location = 5;
  optional string provider = 6;
  repeated string ips = 7;
  string work_path = 8;
  string gdaemon_host = 9;
  int32 gdaemon_port = 10;
  optional int64 created_at = 11;
  optional int64 updated_at = 12;
}
